# SDM_Plugin_SDK

./: LICENSE.md  README.md  create_plugin.py
plugin_template/: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
plugin_template/myPlugin/: CMakeLists.txt  PluginObserver.cpp  PluginObserver.h  myClass.cpp  myClass.h  myPlugin.cpp  myPlugin.h  myPluginDlg.cpp  myPluginDlg.fbp  myPluginDlg.h  myPluginDlgImpl.cpp  myPluginDlgImpl.h
